--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-drawing": "^1.5.7",
+    "@progress/kendo-react-charts": "^2.5.0",
+    "@progress/kendo-react-intl": "^2.5.0",
+    "@progress/kendo-theme-default": "^2.63.0",
+    "hammerjs": "^2.0.8",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
