--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@progress/kendo-drawing": "^1.5.7",
+    "@progress/kendo-react-buttons": "^2.5.0",
     "@progress/kendo-react-charts": "^2.5.0",
     "@progress/kendo-react-intl": "^2.5.0",
     "@progress/kendo-theme-default": "^2.63.0",
